# python-rasenmaeher-rmcli

./: .bumpversion.cfg  .gitignore  Dockerfile_alpine  Dockerfile_debian  README.rst  pyproject.toml
.github/workflows/: build.yml
docker/: entrypoint.sh
src/rmcli/: __init__.py  console.py
src/rmcli/client/: __init__.py  base.py  enroll.py  user.py
tests/: test_console.py  test_rmcli.py
