[tool.poetry]
name = "rmcli"
version = "0.1.0"
description = "CLI interface to RASENMAEHER API"
authors = ["Eero af Heurlin <eero.afheurlin@iki.fi>"]
homepage = "https://github.com/pvarki/python-rasenmaeher-rmcli/"
repository = "https://github.com/pvarki/python-rasenmaeher-rmcli/"
license = "MIT"
readme = "README.rst"

[tool.poetry.scripts]
rmcli = "rmcli.console:rmcli_cli"


[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=rmcli --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.11"
libadvian = "^1.0"
click = "^8.0"
aiohttp = "^3.8"
libpvarki = {git = "https://github.com/pvarki/python-libpvarki.git", rev = "1.6.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
coverage = "^7.3"
pytest-cov = "^4.1"
pylint = "^2.17"
black = "^23.7"
bandit = "^1.7"
mypy = "^1.5"
pre-commit = "^3.3"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
